--- a/DRJTechnology.Cache/DRJTechnology.Cache.csproj
+++ b/DRJTechnology.Cache/DRJTechnology.Cache.csproj
@@ -5,7 +5,26 @@
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
     <Version>1.0.0</Version>
+    <GeneratePackageOnBuild>True</GeneratePackageOnBuild>
+    <Title>dotnetcore interface for redis cache</Title>
+    <Authors>DRJTechnology</Authors>
+    <Description>A package to enable access to redis cache.</Description>
+    <PackageProjectUrl>https://github.com/DRJTechnology/DRJTechnology.Cache</PackageProjectUrl>
+    <PackageReadmeFile>README.md</PackageReadmeFile>
+    <RepositoryType>git</RepositoryType>
+    <RepositoryUrl>https://github.com/DRJTechnology/DRJTechnology.Cache</RepositoryUrl>
+    <PackageTags>C# Redis Cache</PackageTags>
+	<PackageLicenseExpression>MIT</PackageLicenseExpression>
+	<PackageRequireLicenseAcceptance>True</PackageRequireLicenseAcceptance>
+	<PackageReleaseNotes>Initial version</PackageReleaseNotes>
   </PropertyGroup>
+
+  <ItemGroup>
+    <None Include="..\README.md">
+      <Pack>True</Pack>
+      <PackagePath>\</PackagePath>
+    </None>
+  </ItemGroup>
 
   <ItemGroup>
     <PackageReference Include="Microsoft.Extensions.Caching.StackExchangeRedis" Version="7.0.10" />
